@@ -437,6 +437,10 @@ class Common_functions  {
 		if (!is_object($settings))
 			return false;
 
+		// Escape ' & " charaters
+		if (property_exists($settings, 'siteTitle'))
+			$settings->siteTitle = escape_input($settings->siteTitle);
+
 		// default dbversion for older releases
 		if (!property_exists($settings, 'dbversion'))
 			$settings->dbversion = 0;
